Update branch in Github CI to compile linux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 on:
   push:
     branches:
-      - "master"
+      - "playngos"
 
   pull_request:
     branches:
-      - "master"
+      - "playngos"
 
 name: Build
 
